<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInCount">

    <ImageView
        android:id="@+id/backmain"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/istok_web_bold"
        android:lineSpacingExtra="-28sp"
        android:text="@string/log_in_count"
        android:textAppearance="@style/normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backmain" />

    <EditText
        android:id="@+id/username"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bordercolor"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/istok_web"
        android:gravity="center|left"
        android:text="@string/username"
        android:textAppearance="@style/normal"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sign_in_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bordercolor"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/istok_web"
        android:gravity="center|left"
        android:text="@string/password"
        android:textAppearance="@style/normal"
        android:textColor="#78909C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/rememberme"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/istok_web"
        android:text="@string/remember_me"
        android:textAppearance="@style/little"
        app:thumbTint="@color/purple"
        app:trackTint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="330dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberme" />

    <TextView
        android:id="@+id/register"
        android:layout_width="330dp"
        android:layout_height="81dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/colorfullback"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/istok_web_bold"
        android:gravity="center"
        android:lineSpacingExtra="-28sp"
        android:text="@string/login"
        android:textAppearance="@style/normal"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle_2" />


    <TextView
        android:id="@+id/create_account"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/istok_web_bold"
        android:gravity="center"
        android:lineSpacingExtra="-28sp"
        android:text="@string/createaccount"
        android:textAppearance="@style/little"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register" />

</androidx.constraintlayout.widget.ConstraintLayout>