<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Parte superior fija -->
    <View
        android:id="@+id/topbackground"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="#F0EEEE"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/filetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/istok_web_bold"
        android:text="@string/modes"
        android:gravity="center"
        android:elevation="8dp"
        android:textAppearance="@style/Title"
        app:layout_constraintTop_toTopOf="@id/topbackground"
        app:layout_constraintBottom_toBottomOf="@id/topbackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenido desplazable dentro de ScrollView -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topbackground"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/Guess_who"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:background="@drawable/grey_button_background"
                android:elevation="1dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/istok_web_bold"
                android:gravity="center"
                android:text="@string/guess_who"
                android:textAppearance="@style/normal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Most_propably"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:elevation="1dp"
                android:background="@drawable/grey_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/istok_web_bold"
                android:gravity="center"
                android:text="@string/most_probably_of"
                android:textAppearance="@style/normal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/true_false"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:elevation="1dp"
                android:background="@drawable/grey_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/istok_web_bold"
                android:gravity="center"
                android:text="@string/true_or_false"
                android:textAppearance="@style/normal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/free_questions"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:elevation="1dp"
                android:background="@drawable/grey_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/istok_web_bold"
                android:gravity="center"
                android:text="@string/free_questions"
                android:textAppearance="@style/normal"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/create_new"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:elevation="1dp"
                android:background="@drawable/grey_button_background"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/istok_web_bold"
                android:gravity="center"
                android:text="@string/history_or_lie"
                android:textAppearance="@style/normal"
                android:textColor="@color/black" />


        </LinearLayout>
    </ScrollView>

    <!-- Barra de navegación inferior fija -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundmenu"
        app:itemIconSize="80dp"
        android:elevation="8dp"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>